// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<input-group-component> horizontal with numeric fallback cols (labelCol/inputCol) snapshots correctly 1`] = `
<input-group-component append="" form-layout="horizontal" input-col="9" input-id="code" label="Code" label-col="3" prepend="">
  <!---->
  <div class="horizontal">
    <div class="form-group form-input-group-basic horizontal row">
      <label class="col-3 col-form-label form-control-label no-padding" htmlfor="code">
        Code:
      </label>
      <div class="col-9">
        <div class="input-group">
          <div class="input-group-prepend">
            <span class="input-group-text">
              <span slot="prepend">
                #
              </span>
            </span>
          </div>
          <input aria-labelledby="code" class="form-control" id="code" name="code" placeholder="Code" type="text" value="">
          <div class="input-group-append">
            <span class="input-group-text">
              <span slot="append">
                .js
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</input-group-component>
`;

exports[`<input-group-component> mixes slot on append and icon on prepend using side-specific props 1`] = `
<input-group-component append="" input-id="q" label="Search" other-content="" prepend="" prepend-icon="fa-solid fa-magnifying-glass">
  <!---->
  <div>
    <div class="form-group form-input-group-basic">
      <label class="form-control-label" htmlfor="q">
        Search
      </label>
      <div>
        <div class="input-group">
          <div class="input-group-prepend">
            <span class="input-group-text">
              <i class="fa-magnifying-glass fa-solid"></i>
            </span>
          </div>
          <input aria-labelledby="search" class="form-control" id="q" name="search" placeholder="Search" type="text" value="">
          <div class="input-group-append">
            <button class="btn btn-outline-secondary" slot="append" type="button">
              Go
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</input-group-component>
`;

exports[`<input-group-component> renders (stacked) with default props 1`] = `
<input-group-component input-id="user" label="Username">
  <!---->
  <div>
    <div class="form-group form-input-group-basic">
      <label class="form-control-label" htmlfor="user">
        Username
      </label>
      <div>
        <div class="input-group">
          <input aria-labelledby="username" class="form-control" id="user" name="username" placeholder="Username" type="text" value="">
        </div>
      </div>
    </div>
  </div>
</input-group-component>
`;

exports[`<input-group-component> renders horizontal layout with responsive cols, prepend slot and append icon 1`] = `
<input-group-component append="" append-icon="fa-solid fa-dollar-sign" form-layout="horizontal" input-cols="xs-12 sm-8" input-id="amount" label="Amount" label-cols="xs-12 sm-4" prepend="">
  <!---->
  <div class="horizontal">
    <div class="form-group form-input-group-basic horizontal row">
      <label class="col-12 col-form-label col-sm-4 form-control-label no-padding" htmlfor="amount">
        Amount:
      </label>
      <div class="col-12 col-sm-8">
        <div class="input-group">
          <div class="input-group-prepend">
            <span class="input-group-text">
              <span slot="prepend">
                Total
              </span>
            </span>
          </div>
          <input aria-labelledby="amount" class="form-control" id="amount" name="amount" placeholder="Amount" type="text" value="">
          <div class="input-group-append">
            <span class="input-group-text">
              <i class="fa-dollar-sign fa-solid"></i>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</input-group-component>
`;
